Bump Finagle benchmarks